--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div id="instructions" class="tab-content">
-        <h2 style="text-align: center; font-family: 'Arial', sans-serif;">Welcome to the Wealth Wallet!</h2>
+        <h2 style="text-align: center; font-family: 'Arial', sans-serif;">Welcome to Wealth Wallet!</h2>
         <p style="font-family: 'Arial', sans-serif;">Follow these steps to make the most of the application:</p>
         <ol style="font-family: 'Arial', sans-serif; line-height: 1.5;">
             <li><strong>Setup:</strong> Enter income per paycheck and adjust sliders for Needs, Wants, and Savings.</li>
@@ -112,7 +112,6 @@
         <label for="month-select">Month</label>
         <select class = "month-select" id="month-select"></select>
         <button class="center-button" type="button" onclick="saveCurrentMonth()">Save and Reset</button>
-        <br></br>
         <div id="pie-chart-container">
             <canvas id="pie-chart"></canvas>
         </div>
