--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="navbar">
         <a href="#" onclick="showTab('instructions')">Home</a>
         <a href="#" onclick="showTab('setUp')">Setup</a>
-        <a href="#" onclick="showTab('addExpenses')">Add Expense</a>
+        <a href="#" onclick="showTab('addExpenses')">Add</a>
         <a href="#" onclick="showTab('expenseChart')">Summary</a>
     </div>
 
