--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p style="font-family: 'Arial', sans-serif;">Follow these steps to make the most of the application:</p>
         <ol style="font-family: 'Arial', sans-serif; line-height: 1.5;">
             <li><strong>Setup:</strong> Enter income per paycheck and adjust sliders for Needs, Wants, and Savings.</li>
-            <li><strong>Add Expense:</strong> Input expense details and click "Add" to update totals.</li>
+            <li><strong>Add:</strong> Input expense details and click "Add Expense" to update totals.</li>
             <li><strong>Summary:</strong> View expense breakdown and compare with set targets.</li>
             <li><strong>Monthly Management:</strong> Save current month's data in PNG file and reset for the next month.</li>
         </ol>
